Default build with Java 11
Remove accidental use of Java 16 Stream.toList() and update Action to catch such problems earlier.
Increase available memory for testing to avoid errors on Apple Silicon.